--- a/Product/ProductStyle.css
+++ b/Product/ProductStyle.css
@@ -301,6 +301,7 @@ header{
     margin-top: 83px;
 } */
 
+
 .product-text h2>span{
     color: var(--button-color);
 }
@@ -503,7 +504,7 @@ header{
 } */
 
 /* Feedback */
-.feedback{  /* background hijau feedback */
+/* .feedback{  
     width: 1100px;
     height: 247px;
     border-radius: 20px;
@@ -515,7 +516,7 @@ header{
     margin-bottom: 100px;
 }
 
-.feedback-header { /*paragraf 'give us feedback...' + image kanan kiri */
+.feedback-header { 
     color: #FFF;
     text-align: center;
     font-family: 'Inter';
@@ -529,13 +530,13 @@ header{
     margin-top: -20px;
 }
 
-.feedback-header > p{ /*paragraf 'give us feedback...' */
+.feedback-header > p{
     margin-left: 140px;
     margin-right: 150px;
     margin-top: -80px;
 }
 
-.feedback img{ /* img cust kanan kiri */
+.feedback img{
     width: 130px;
     height: 160px;
     margin-top: 20px;
@@ -609,64 +610,59 @@ header{
 .star:hover{
     cursor: pointer;
     color: #FFFFFF;
-}
+} */
 
 /* Content */
-.grid {
-    display: flex;
-    gap: 7px;
-    float: right;
-    /* background-color: #000000; */
+#grid {
+    columns: 18rem;
+    gap: 1rem;
+    counter-reset: grid;
 }
 
-.column {
-    display: flex;
-    flex-direction: column;
-    gap: 17px;
+.item+.item {
+    margin-top: 1rem;
 }
 
-.column-1 img {
-    border-radius: 5px;
-    float: right;
-    justify-content: flex-start;
-    margin-top: 10px;
-
+.item {
+    break-inside: avoid;
+    aspect-ratio: 4 / 3;
+    background: lightblue;
+    padding: 1rem;
+    border-radius: 0.75rem;
+    position: relative;
+    /* Add position relative for absolute positioning */
 }
 
-.image-1 img {
-    width: 224.457px;
-    height: 267.818px;
-    flex-shrink: 0;
+.item:nth-child(3n) {
+    aspect-ratio: 1;
+    background: lavender;
+}
+
+.item:nth-child(3n - 1) {
+    aspect-ratio: 4 / 3;
+    background: lightblue;
+}
+
+.ImgContent {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 15px;
+}
+
+.Text-ContentTea{
+    font-family: 'inter';
+    text-align: center;
+}
+
+#ParagraphContent{
+    font-family: 'Inter';
+    text-align: justify;
     margin-top: 20px;
 }
 
-.image-2 img {
-    width: 198.951px;
-    height: 230.834px;
-    flex-shrink: 0;
-    margin-top: 15px;
-}
-
-.column-2 img {
-    border-radius: 5px;
-    float: right;
-    justify-content: flex-start;
-    margin-top: 30px;
-}
-
-.image-3 img {
-    width: 227.008px;
-    height: 279.934px;
-    flex-shrink: 0;
-    margin-top: 52px;
-}
-
-.image-4 img {
-    width: 224.457px;
-    height: 267.818px;
-    flex-shrink: 0;
-    margin-top: 18px;
-}
 
 /* FOOTER */
 footer {
